Woche 1 abgeschlossen: Cognito OAuth + JWT Validation + Rollenprüfung

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,3 +20,8 @@ spring.jpa.properties.hibernate.format_sql=true
 # H2 Console (lokal)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# ---------------------------------------
+# Security – Cognito JWT Validation
+# ---------------------------------------
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://cognito-idp.eu-central-1.amazonaws.com/eu-central-1_EG8oTyz7B
